--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-hook-form": "^5.7.2",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
